# react-iztro

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
.trae/specs/add-version-update-feature/: checklist.md  spec.md  tasks.md
demo/: .vercelignore  capacitor.config.ts  index.html  nsis-simpchinese.nsh  package-lock.json  package.json  vite.config.ts
demo/android/app/: build.gradle
demo/android/app/src/main/java/com/iztro/ai/: MainActivity.java
demo/android/app/src/main/res/values/: strings.xml
demo/src/: App.tsx  ziwei-theme.css
demo/src-tauri/: Cargo.toml  tauri.conf.json
demo/src-tauri/capabilities/: default.json
demo/src-tauri/src/: lib.rs  main.rs
demo/src/components/: AIInterpretation.tsx  AISettings.tsx  Header.tsx  InputForm.tsx  TauriUpdateBanner.tsx  UpdateChecker.tsx
demo/src/hooks/: useTauriUpdater.ts
demo/src/lib/: downloadUtils.ts  openUrl.ts  platformUtils.ts
demo/src/services/: deepseekService.ts
example/: package-lock.json
